# GW-CPP-Client

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Benchmarker/: CMakeLists.txt  main.cpp
Benchmarker/Benchmarks/: BaseBenchmark.h  Benchmarker.h  Json.cpp  Json.h  Proto.cpp  Proto.h  Xml.cpp  Xml.h
Benchmarker/Packets/: JsonPacket.cpp  JsonPacket.h  XmlPacket.cpp  XmlPacket.h
Benchmarker/Packets/Proto/: BlockUpdate.pb.cc  BlockUpdate.pb.h  ChatMessage.pb.cc  ChatMessage.pb.h  Chunk.pb.cc  Chunk.pb.h  Input.pb.cc  Input.pb.h  Phone.pb.cc  Phone.pb.h  PlayerJoin.pb.cc  PlayerJoin.pb.h  PlayerUpdate.pb.cc  PlayerUpdate.pb.h
LeapEngine/GameContext/Logger/: NetworkLogger.cpp  NetworkLogger.h
UnnamedAdventureGame/: CMakeLists.txt  main.cpp
UnnamedAdventureGame/Benchmarks/: BaseBenchmark.h  ClientNetwork.cpp  ClientNetwork.h  Json.cpp  Json.h  Xml.cpp  Xml.h
UnnamedAdventureGame/Packets/: JsonPacket.cpp  JsonPacket.h  XmlPacket.cpp  XmlPacket.h
UnnamedAdventureGame/Scenes/: MainMenuScene.cpp
